@@ -213,7 +213,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,132,76,10
 END
 
-IDD_PROPBUMPER_VISUALS DIALOGEX 0, 0, 125, 189
+IDD_PROPBUMPER_VISUALS DIALOGEX 0, 0, 125, 203
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -223,22 +223,24 @@ BEGIN
     COMBOBOX        IDC_MATERIAL_COMBO,7,11,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_MATERIAL_COMBO2,7,34,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_MATERIAL_COMBO3,7,56,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        8,60,94,40,12,ES_AUTOHSCROLL
-    EDITTEXT        24,60,108,40,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_ORIENTATION_EDIT,60,123,40,12,ES_AUTOHSCROLL
+    EDITTEXT        8,77,94,40,12,ES_AUTOHSCROLL
+    EDITTEXT        24,77,108,40,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ORIENTATION_EDIT,77,123,40,12,ES_AUTOHSCROLL
     LTEXT           "Orientation",IDC_STATIC,7,124,35,8
-    EDITTEXT        IDC_RINGSPEED_EDIT,60,137,40,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_RINGSPEED_EDIT,77,137,40,12,ES_AUTOHSCROLL
     LTEXT           "Ring Speed",IDC_STATIC,7,139,38,8
-    CONTROL         "Cap Visible",109,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,163,51,10
-    CONTROL         "Base Visible",110,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,163,51,10
+    CONTROL         "Cap Visible",109,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,180,51,10
+    CONTROL         "Base Visible",110,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,180,51,10
     LTEXT           "&Radius",IDC_STATIC,7,96,23,9
     LTEXT           "Height Scale",IDC_STATIC,7,109,50,9
     CONTROL         "Reflection Enabled",IDC_BUMPER_REFLECT_ENABLED_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,152,76,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,169,76,10
     LTEXT           "Ring Material",IDC_STATIC,7,69,42,8
-    COMBOBOX        IDC_MATERIAL_COMBO4,7,77,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Ring Visible",IDC_RING_VISIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,174,51,10
-    CONTROL         "Skirt Visible",IDC_SKIRT_VISIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,174,51,10
+    COMBOBOX        IDC_MATERIAL_COMBO4,6,77,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Ring Visible",IDC_RING_VISIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,190,51,10
+    CONTROL         "Skirt Visible",IDC_SKIRT_VISIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,190,51,10
+    LTEXT           "Ring Drop Offset",IDC_STATIC,7,154,54,8
+    EDITTEXT        IDC_RINGDROPOFFSET_EDIT,77,152,40,12,ES_AUTOHSCROLL
 END
 
 IDD_CODEVIEW DIALOGEX 0, 0, 419, 215
@@ -2347,7 +2349,7 @@ BEGIN
 
     IDD_PROPBUMPER_VISUALS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 174
+        BOTTOMMARGIN, 200
     END
 
     IDD_CODEVIEW, DIALOG
@@ -3284,6 +3286,11 @@ BEGIN
 END
 
 IDD_PROPBACKGLASS_VISUALS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PROPBUMPER_VISUALS AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
